# NetX-FFT

./: CMakeLists.txt  Makefile  README.md  _netx.toml  main.cpp
src/: fft.nx
